# wirecache

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  docker-compose.yml  feeds.example.yaml  feeds.yaml  news.py  pyproject.toml  schema.sql
.github/workflows/: ci.yml
docs/: CAPABILITIES.md
scripts/: fetch.sh  news.py
src/wirecache/: __init__.py  cli.py  config.py  docker_lifecycle.py  logutil.py
src/wirecache/feeds/: __init__.py  opml.py  registry.py
src/wirecache/fetch/: __init__.py  rss.py
src/wirecache/output/: __init__.py  json_fmt.py  text_fmt.py  voice_fmt.py
src/wirecache/store/: __init__.py  stories.py
tests/: test_logutil.py  test_opml.py  test_output.py  test_parse_date.py  test_query_filter.py  test_registry.py
