[project]
name = "wirecache"
version = "0.1.0"
description = "Cache a curated newswire locally and query it — no wandering the open web."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Adrian Bolinger" }]
dependencies = [
    "feedparser",
    "psycopg2-binary",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wirecache = "wirecache.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
